testFramework [starter]: update CHANGELOG.md for 2026.2
GitOrigin-RevId: 53e9a5669b6700436ae49b63ba5f8c8297a0ef10